--- a/cabeleleira/pages/styles/style.css
+++ b/cabeleleira/pages/styles/style.css
@@ -4,6 +4,34 @@
     box-sizing: border-box;
 }
 
+/* FONTES */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Pacifico&display=swap');
+
+@font-face {
+    font-family: 'Great Vibes';
+    /* o nome usado na folha de estilos para usar a fonte, pode ser outro */
+    src        : url('../../assets/fonts/GreatVibes-Regular.ttf');
+}
+
+.title-style01 {
+    font-family: 'Great Vibes', cursive, sans-serif;
+    font-size  : 50px;
+}
+
+.title-price2 {
+    font-family: 'Pacifico', cursive, sans-serif;
+}
+
+.txt-padrao {
+    color: #000000;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 /* NAVBAR */
 .fa-facebook-f,
 .fa-instagram,
@@ -11,8 +39,6 @@
     display              : block;
     padding              : 10px 10px;
     margin               : 0 5px;
-    color                : #ffffff;
-    background-color     : #000000;
     border-radius        : 50%;
     font-size            : 15px;
     -webkit-border-radius: 50%;
@@ -25,17 +51,93 @@
     padding: 10px 15px;
 }
 
+.icon-social-top {
+    color           : #ffffff !important;
+    background-color: #000000 !important;
+}
+
 #redes-sociais-hide a>i {
     font-size: 17pt !important;
 }
 
+a {
+    color: inherit;
+}
+
+a:hover {
+    color          : inherit;
+    text-decoration: none;
+}
+
+.cor-link02 {
+    text-decoration: none !important;
+    color          : #ffffff !important;
+}
+
+.nav-link {
+    color  : #000000;
+    padding: .5rem 1rem;
+}
+
+.nav-link:hover {
+    color             : #DAC780 !important;
+    transition        : all 0.3s 0.2s;
+    -webkit-transition: all 0.3s 0.2s;
+    -moz-transition   : all 0.3s 0.2s;
+    -ms-transition    : all 0.3s 0.2s;
+    -o-transition     : all 0.3s 0.2s;
+}
+
 .nav-link02 {
-    color  : #303030;
+    color  : #000000;
     padding: .5rem 1rem;
 }
 
 .nav-link02:hover {
-    color: #303030;
+    color: #DAC780;
+}
+
+.nav-link03 {
+    color: #DAC780 !important;
+}
+
+.link-whatsapp {
+    position: fixed;
+    right   : 0px;
+    bottom  : 40px;
+    z-index : 999;
+}
+
+.logo-zap {
+    width                : 50px;
+    border-radius        : 45%;
+    -webkit-border-radius: 45%;
+    -moz-border-radius   : 45%;
+    -ms-border-radius    : 45%;
+    -o-border-radius     : 45%;
+    margin-right         : 5px;
+}
+
+/* BUTTON CLOSE MENU */
+.btn-close-menu {
+    position             : absolute;
+    border               : 0;
+    background           : transparent;
+    color                : #DAC780;
+    font-size            : 25px;
+    border-radius        : 0px;
+    right                : 15px;
+    top                  : 35px;
+    padding              : 0 6px;
+    display              : none;
+    -webkit-border-radius: 0px;
+    -moz-border-radius   : 0px;
+    -ms-border-radius    : 0px;
+    -o-border-radius     : 0px;
+}
+
+.navbar-toggler-icon {
+    background-image: url('../../images/menu-icon.png') !important;
 }
 
 .title-site {
@@ -44,8 +146,12 @@
 }
 
 /* SEÇÃO SERVIÇOS */
-.space-section {
-    margin-top: 90px;
+section {
+    /* PADRÕES DAS SEÇÕES*/
+    margin-top    : 10px;
+    margin-bottom : 10px;
+    padding-top   : 40px;
+    padding-bottom: 40px;
 }
 
 .div-servicos {
@@ -84,6 +190,23 @@
 .bg-servicos-branco {
     color           : #000000;
     background-color: #ffffff;
+}
+
+.bg-especial {
+    background         : url('../../images/background/especiais.webp') fixed no-repeat;
+    background-position: center;
+}
+
+.bg-contato {
+    background         : url('../../images/background/contato.webp') fixed no-repeat;
+    background-position: center;
+}
+
+/* SEÇÃO ESPECIAL */
+.initial-price {
+    display     : block;
+    float       : left;
+    margin-right: 5px;
 }
 
 /* SEÇÃO DEPOIMENTOS */
@@ -195,7 +318,7 @@ div#cTestimonyInner>.text {
 }
 
 /* SEÇÃO FOOTER */
-.fa-facebook-f,
+#footer .fa-facebook-f,
 .fa-instagram,
 .fa-twitter {
     display              : block;
@@ -211,7 +334,7 @@ div#cTestimonyInner>.text {
     -o-border-radius     : 50%;
 }
 
-.fa-facebook-f {
+#footer .fa-facebook-f {
     padding: 10px 15px;
 }
 
@@ -229,13 +352,16 @@ div#cTestimonyInner>.text {
 }
 
 .txt-corp {
-    font-size  : 15px;
+    font-size  : 12px;
     font-weight: 400;
 }
 
-@media(max-width: 578px) {
+@media (max-width: 1200px) {}
+
+
+@media (max-width: 992px) {
     .img-logo {
-        width    : 100%;
+        width    : 97px;
         max-width: 200px;
     }
 
@@ -291,5 +417,182 @@ div#cTestimonyInner>.text {
         height        : auto !important;
         filter        : contrast(0.01);
         -webkit-filter: contrast(0.01);
+    }
+
+    /* FOOTER */
+    .txt-corp {
+        font-size  : 12px;
+        font-weight: 400;
+    }
+}
+
+@media (max-width: 768px) {
+    .img-logo {
+        width    : 120px;
+        max-width: 200px;
+    }
+
+    /* SEÇÃO SERVIÇOS */
+    .bg-face {
+        background           : url('../../images/servicos/facial.jpeg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-make {
+        background           : url('../../images/servicos/make.jpg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-hair {
+        background           : url('../../images/servicos/hair.jpeg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-nails {
+        background           : url('../../images/servicos/nails.jpg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    /* SEÇÃO DEPOIMENTOS */
+
+    .vh-box-dep {
+        height: 30vh !important;
+    }
+
+    .aspas-1 {
+        display          : block;
+        float            : left;
+        transform        : rotate(180deg);
+        width            : 4% !important;
+        height           : auto !important;
+        filter           : contrast(0.01);
+        -webkit-transform: rotate(180deg);
+        -moz-transform   : rotate(180deg);
+        -ms-transform    : rotate(180deg);
+        -o-transform     : rotate(180deg);
+        -webkit-filter   : contrast(0.01);
+    }
+
+    .aspas-2 {
+        display       : block;
+        float         : right;
+        width         : 4% !important;
+        height        : auto !important;
+        filter        : contrast(0.01);
+        -webkit-filter: contrast(0.01);
+    }
+
+    /* FOOTER */
+    .txt-corp {
+        font-size  : 12px;
+        font-weight: 400;
+    }
+}
+
+@media(max-width: 578px) {
+    .img-logo {
+        width    : 110px;
+        max-width: 200px;
+    }
+
+    /* SEÇÃO SERVIÇOS */
+    .bg-face {
+        background           : url('../../images/servicos/facial.jpeg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-make {
+        background           : url('../../images/servicos/make.jpg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-hair {
+        background           : url('../../images/servicos/hair.jpeg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    .bg-nails {
+        background           : url('../../images/servicos/nails.jpg') no-repeat;
+        background-size      : cover;
+        background-position-y: -70px;
+    }
+
+    /* SEÇÃO ESPECIAL */
+    .initial-price {
+        display     : block;
+        float       : left;
+        margin-right: 5px;
+    }
+
+    .initial-price-min-screen {
+        display: none;
+    }
+
+    .text-caption {
+        display: none;
+    }
+
+    /* SEÇÃO DEPOIMENTOS */
+
+    .vh-box-dep {
+        height: 30vh !important;
+    }
+
+    .aspas-1 {
+        display          : block;
+        float            : left;
+        transform        : rotate(180deg);
+        width            : 4% !important;
+        height           : auto !important;
+        filter           : contrast(0.01);
+        -webkit-transform: rotate(180deg);
+        -moz-transform   : rotate(180deg);
+        -ms-transform    : rotate(180deg);
+        -o-transform     : rotate(180deg);
+        -webkit-filter   : contrast(0.01);
+    }
+
+    .aspas-2 {
+        display       : block;
+        float         : right;
+        width         : 4% !important;
+        height        : auto !important;
+        filter        : contrast(0.01);
+        -webkit-filter: contrast(0.01);
+    }
+
+    /* FOOTER */
+    .txt-corp {
+        font-size  : 12px;
+        font-weight: 400;
+    }
+}
+
+@media(max-width: 500px) {
+
+    /* SEÇÃO ESPECIAL */
+    .initial-price {
+        display: none;
+    }
+
+    .initial-price-min-screen {
+        display     : block;
+        float       : left;
+        margin-right: 5px;
+    }
+
+    .text-caption {
+        display     : block;
+        color       : #d2d2d2 !important;
+        font-size   : 14px !important;
+        font-weight : 300 !important;
+        padding-left: 11px;
     }
 }
