--- a/cabeleleira/assets/styles/scroll-indicator.css
+++ b/cabeleleira/assets/styles/scroll-indicator.css
@@ -10,7 +10,8 @@
 /* The progress container (grey background) */
 .progress-container {
   top       : 0px;
-  position  : absolute;
+  position  : fixed;
+  z-index   : 9999;
   width     : 100%;
   height    : 4px;
   background: #d6d2c1;
