--- a/cabeleireira/assets/styles/style.css
+++ b/cabeleireira/assets/styles/style.css
@@ -18,6 +18,7 @@
 .title-style01 {
     font-family: 'Great Vibes', cursive, sans-serif;
     font-size  : 50px;
+    text-align : center;
 }
 
 .title-price2 {
@@ -229,6 +230,7 @@ section {
 .content-servico {
     /* background: rgb(131, 131, 131); */
     /* background: linear-gradient(0deg, rgba(131, 131, 131, 0.45451684091605393) 0%, rgba(221, 221, 221, 0.16880255520176823) 30%, rgba(255, 255, 255, 0) 60%) !important; */
+    margin: 0 20px;
 }
 
 .degrade {
@@ -282,7 +284,6 @@ section {
     background-position: center;
 }
 
-/* SEÇÃO SERVIÇOS */
 .bg-face {
     background-image   : url('../../images/servicos/facial.jpeg');
     background-size    : cover;
@@ -301,6 +302,13 @@ section {
     background         : url('../../images/servicos/hair.jpg') no-repeat;
     background-size    : 110%;
     background-position: -10px -11px;
+    -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 30%);
+}
+
+.bg-hair-male {
+    background         : url('../../images/servicos/hair-male.jpg') no-repeat;
+    background-size    : cover;
+    background-position: center;
     -webkit-mask-image : linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 30%);
 }
 
@@ -551,8 +559,8 @@ div#cTestimonyInner>.text {
     }
 
     .div-servicos {
-        width     : auto;
-        height    : 275px;
+        width     : 240px;
+        height    : 240px;
         margin    : 0;
         padding   : 0;
         text-align: center;
@@ -633,13 +641,6 @@ div#cTestimonyInner>.text {
         padding-right: 2px !important;
     }
 
-    /* SEÇÃO SERVIÇOS */
-    /* .bg-make {
-        background         : url('../../images/servicos/make.jpeg') no-repeat;
-        background-size    : cover;
-        background-position: 0px -50px;
-
-    } */
 }
 
 @media (max-width: 768px) {
@@ -655,8 +656,8 @@ div#cTestimonyInner>.text {
     }
 
     .div-servicos {
-        width     : auto;
-        height    : 275px;
+        width     : 240px;
+        height    : 240px;
         margin    : 0;
         padding   : 0;
         text-align: center;
@@ -733,9 +734,10 @@ div#cTestimonyInner>.text {
     }
 
     .div-servicos {
-        width     : auto;
-        height    : 300px;
-        margin    : 0px 5px;
+        width     : 340px;
+        height    : 340px;
+        margin    : 0;
+        padding   : 0;
         text-align: center;
     }
 
@@ -827,9 +829,10 @@ div#cTestimonyInner>.text {
     }
 
     .div-servicos {
-        width     : auto;
-        height    : 240px;
-        margin    : 0px 5px;
+        width     : 320px;
+        height    : 320px;
+        margin    : 0;
+        padding   : 0;
         text-align: center;
     }
 
