--- a/cabeleireira/assets/styles/style.css
+++ b/cabeleireira/assets/styles/style.css
@@ -251,10 +251,13 @@ section {
     display         : block;
     background-color: #DAC780;
     padding         : 10px;
+    background      : rgb(202, 143, 8);
+    background      : linear-gradient(180deg, rgba(202, 143, 8, 1) 0%, rgba(211, 175, 44, 1) 50%, rgba(202, 143, 8, 1) 100%);
 }
 
 .btn-agendar:hover {
-    background-color  : #d3ba60;
+    background        : rgba(211, 175, 44, 1);
+    background        : linear-gradient(180deg, rgba(211, 175, 44, 1) 100%, rgba(202, 143, 8, 1) 0%, rgba(211, 175, 44, 1) 100%);
     -webkit-transition: all 0.2s ease-out 0s;
     transition        : all 0.2s ease-out 0s;
     -moz-transition   : all 0.2s ease-out 0s;
